# openIDE

./: .gitmodules  CMakeLists.txt  CodeEditor.cpp  CodeEditor.hpp  FileMenu.cpp  FileMenu.hpp  FileType.cpp  KeywordDictionary.hpp  MainWindow.cpp  MainWindow.hpp  ProjectTree.cpp  ProjectTree.hpp  README.md  SyntaxHighlighter.cpp  main.cpp
include/: AppSettings.hpp  CodeEditor.hpp  CodeTabPane.hpp  FileType.hpp  KeywordDictionary.hpp  MainWindow.hpp  ProjectTree.hpp
include/code/: CodeEditor.hpp  CodeTabPane.hpp  ColorScheme.hpp  FindReplaceDialog.hpp  PaneContainer.hpp  SyntaxHighlighter.hpp  TreeSitterWrapper.hpp
include/menu/: EditMenu.hpp  FileMenu.hpp  NewFileDialog.hpp  NewProjectDialog.hpp  SettingsDialog.hpp  SettingsMenu.hpp  TerminalMenu.hpp  ThemeMenu.hpp
include/terminal/: TerminalBackendInterface.hpp  TerminalFrontend.hpp  UnixTerminalBackend.hpp  WindowsTerminalBackend.hpp
include/ui/: StyleUtils.hpp
src/: AppSettings.cpp  CMakeLists.txt  CodeTabPane.cpp  FileMenu.cpp  FileType.cpp  KeywordDictionary.cpp  MainClass.java  MainWindow.cpp  MainWindow.hpp  ProjectTree.cpp  SyntaxHighlighter.cpp  main.cpp
src/code/: CodeEditor.cpp  CodeTabPane.cpp  ColorScheme.cpp  FindReplaceDialog.cpp  PaneContainer.cpp  SyntaxHighlighter.cpp  TreeSitterWrapper.cpp
src/menu/: EditMenu.cpp  FileMenu.cpp  NewFileDialog.cpp  NewProjectDialog.cpp  SettingsDialog.cpp  SettingsMenu.cpp  TerminalMenu.cpp  ThemeMenu.cpp
src/terminal/: TerminalBackendInterface.cpp  TerminalFrontend.cpp  UnixTerminalBackend.cpp  WindowsTerminalBackend.cpp
src/ui/: StyleUtils.cpp
